BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call_Website_Detail_BMS__c.object
<CustomObject>
    <fields>
        <fullName>Activity_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>Activity ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Answer_BMS__c</fullName>
        <label>Answer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Call_BMS__c</fullName>
        <label>Parent Interaction</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Website Interaction Details</relationshipLabel>
        <relationshipName>Website_Interaction_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_BMS__c</fullName>
        <label>Question</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_BMS__c</fullName>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webcast_ID_BMS__c</fullName>
        <label>Webcast ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Website Interaction Detail</label>
    <nameField>
        <displayFormat>WD-{00000000}</displayFormat>
        <label>Website Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website Interaction Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>